--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@
 .scr{
     scrollbar-width:none;
 }
+
+*{
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
+  /* font-variation-settings:
+    "wdth" 100; */
+}
